--- a/create_account.html
+++ b/create_account.html
@@ -70,7 +70,7 @@
         await updateProfile(user, { displayName: name });
 
         // Store user data in Realtime Database using UID as key
-        const loginRef = ref(database, 'login/' + user.uid);
+        const loginRef = ref(database, 'login/' + company);
         await set(loginRef, {
           name: name,
           email: email,
