--- a/create_event.html
+++ b/create_event.html
@@ -12,11 +12,11 @@
 <body>
   <div id="container">
     <header style="display: inline-block;">
-      <a href="index.html"><img src="images/logo.png" alt="Munky Bizness logo"></a>
+      <a href="index.html" id="logo"><img src="images/logo.png" alt="Munky Bizness logo"></a>
     </header>
 
     <nav>
-      <ul>
+      <ul id="navList">
         <li style="float:right;" id="authButton"><a href="login.html">SIGN IN</a></li>
       </ul>
     </nav>
@@ -96,7 +96,7 @@
 <script type="module">
   import { getDatabase, set, ref, push } from "https://www.gstatic.com/firebasejs/9.0.0/firebase-database.js";;
   import { initializeApp } from "https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js";
-  import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.0.0/firebase-auth.js";
+  import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/9.0.0/firebase-auth.js";
   const firebaseConfig = {
       apiKey: "AIzaSyCFcAzIbkyu33GuRAS_oYtc6IUlmxqFEdM",
      authDomain: "evnt-320a0.firebaseapp.com",
@@ -109,22 +109,35 @@
   const database = getDatabase(app);
   const auth = getAuth();
 
-
-onAuthStateChanged(auth, (user) => {
-  const authButton = document.getElementById("authButton");
-  if (user) {
-    authButton.innerHTML = `<a href="profile.html" id="profileButton">${user.displayName || "Profile"}</a>`;
-  }
-});
-
-// Get a database reference to our blog
-function getQueryParam(param) {
+  function getQueryParam(param) {
     const urlParams = new URLSearchParams(window.location.search);
     return urlParams.get(param);
 }
 
   const selectedDate = getQueryParam("date");
   const company = getQueryParam("company");
+  console.log(getQueryParam("company"))
+
+  onAuthStateChanged(auth, (user) => {
+    const logo = document.getElementById("logo")
+    logo.innerHTML = `<a href="index.html?company=${company}" id="logo"><img src="images/logo.png" alt="Munky Bizness logo"></a>`;
+    const navList = document.getElementById("navList");
+
+    if (user) {
+      navList.innerHTML = `
+    <li style="float: right;" id="logout"><a href="login.html">Log Out</a></li>
+    <li style="float: right;"><a href="profile.html?company=${company}">${user.displayName || "Profile"}</a></li>
+  `;    }
+    document.getElementById("logout").addEventListener("click", (e) => {
+      e.preventDefault();
+      signOut(auth).then(() => {
+        window.location.href = "login.html"; // Redirect after logout
+      }).catch((error) => {
+        console.error("Sign-out error:", error);
+        alert("Error signing out. Try again.");
+      });
+    });
+    });
   document.addEventListener("DOMContentLoaded", function () {
     if (selectedDate) {
         document.getElementById("Date").value = selectedDate;
@@ -158,9 +171,8 @@ function getQueryParam(param) {
       ETime: ETime,
       timestamp: Date.now()
   });
-
     document.getElementById("dataEntry").reset();
-
+    window.location.href = `index.html?company=${company}`
   });
 </script>
 
